--- a/css/ChiTietNgheSy.css
+++ b/css/ChiTietNgheSy.css
@@ -38,20 +38,40 @@ body{
 .details1 p {
     color: white;
     text-align: justify;
+    font-size:12px;
+    line-height: 28px;
+    letter-spacing: 1px;
+    font-weight: normal;
 }
 .details2 img {
-    margin-top: 50px;
+    margin-top: 10px;
     border: 3px solid white;
     height: 371.4px;
     width: 371.4px;
     border-radius: 2%;
 }
-.btn-circle {
-    width: 30px;
-    height: 30px;
-    text-align: center;
-    padding: 6px 0;
-    font-size: 12px;
-    line-height: 1.428571429;
-    border-radius: 15px;
+
+
+*{
+    padding: 0px;
+    margin: 0px;
+}
+.lo1{
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border: 1px solid white;
+    border-radius: 50%;
+    margin-top: 15px;
+}
+.lo1:hover{
+    background: orange;
+    opacity: 0.7;
+}
+.lo1 a{
+    position: absolute;
+    top: 22%;
+    left: 40%;
+    color: white;
+    text-decoration: none;
 }
