--- a/css/ChiTietNgheSy.css
+++ b/css/ChiTietNgheSy.css
@@ -56,7 +56,7 @@ body{
     padding: 0px;
     margin: 0px;
 }
-.lo1{
+#lo1{
     position: relative;
     width: 40px;
     height: 40px;
@@ -64,14 +64,43 @@ body{
     border-radius: 50%;
     margin-top: 15px;
 }
-.lo1:hover{
+#lo1:hover{
     background: orange;
-    opacity: 0.7;
+    opacity: 1;
 }
-.lo1 a{
+#lo1 a{
     position: absolute;
     top: 22%;
     left: 40%;
     color: white;
     text-decoration: none;
+}
+
+
+#lo2{
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border: 1px solid white;
+    border-radius: 50%;
+    margin-top: 15px;
+
+}
+#lo2:hover{
+    background: orange;
+    opacity: 1;
+}
+#lo2 a{
+    position: absolute;
+    top: 18%;
+    left: 18%;
+    color: white;
+    text-decoration: none;
+}
+#lo2 img{
+    width: 25px;
+    height: 25px;
+}
+.lo1{
+    display: inline-block;
 }
