--- a/css/ChiTietNgheSy.css
+++ b/css/ChiTietNgheSy.css
@@ -104,3 +104,28 @@ body{
 .lo1{
     display: inline-block;
 }
+
+#lo3{
+    position: relative;
+    width: 40px;
+    height: 40px;
+    border: 1px solid white;
+    border-radius: 50%;
+    margin-top: 15px;
+
+}
+#lo3:hover{
+    background: orange;
+    opacity: 1;
+}
+#lo3 a{
+    position: absolute;
+    top: 10%;
+    left: 18%;
+    color: white;
+    text-decoration: none;
+}
+#lo3 img{
+    width: 25px;
+    height: 13px;
+}
