--- a/css/event2016.css
+++ b/css/event2016.css
@@ -1,9 +1,9 @@
 .container{
-    height: 2000px;
+    height: 3150px;
 }
 .container .header{
     position: relative;
-    border: 1px solid red;
+
     width: auto;
     height: 390px;
 }
@@ -29,7 +29,7 @@
 }
 .title{
     position: relative;
-    border: 1px solid red;
+
     height: 300px;
     width: auto;
 }
@@ -44,24 +44,86 @@
     color: #FFFFFF;
 }
 .event1{
-    border: 1px solid red;
+    padding-top: 130px;
+
     width: 100%;
-    height: 750px;
+    height: 730px;
 }
 .event1 .even1-1 {
-    border: 1px solid red;
-    width: 37%;
+
+    width: 44%;
     height: auto;
     float: left;
-}
-.event1 .even1-1{
     color: #FFFFFF;
 }
-
-
+.even1-1 h2{
+    padding-bottom: 30px;
+}
+.even1-1 p{
+    font-size: 20px;
+    line-height: 28px;
+    letter-spacing: 1px;
+    margin-right: 10px;
+}
 .event1 .even1-2{
-    border: 1px solid red;
-    width: 62%;
+
+    width: 54%;
     height: auto;
     float: left;
+    padding-left: 10px;
+}
+.even1-2 img{
+    box-shadow: 0px 0px 5px #f3f3f3;
+}
+.event2{
+
+    width: 100%;
+    height: 700px;
+}
+.event2 .event2-1 {
+
+    width: 54%;
+    height: auto;
+    float: left;
+    color: #FFFFFF;
+}
+.event2-1 img{
+    box-shadow: 0px 0px 5px #f3f3f3;
+}
+.event2 .event2-2 {
+
+    width: 44%;
+    height: auto;
+    float: left;
+    color: #FFFFFF;
+}
+.event3{
+
+    width: 100%;
+    height: 900px;
+}
+.event3 p{
+    color: #FFFFFF;
+    line-height: 28px;
+    letter-spacing: 1px;
+}
+.event3 .p1{
+    height: auto;
+    width: 49%;
+    float: left;
+}
+.event3 .p2{
+    height: auto;
+    width: 49%;
+    float: left;
+}
+.event3 .img{
+
+    padding-top: 400px;
+    padding-left: 290px;
+}
+.event3 .img img{
+    width: 670px;
+    height: 136px;
+
 }
