--- a/css/event2015.css
+++ b/css/event2015.css
@@ -1,11 +1,10 @@
 .container{
-    height: 3150px;
+    height: 3000px;
 }
 .container .header{
     position: relative;
-
     width: auto;
-    height: 390px;
+    height: 410px;
 }
 .header .time{
     margin-top: 10px;
@@ -22,83 +21,92 @@
 }
 .header img{
     position: absolute;
-    left: 20%;
-    bottom: 1px;
-    width: 670px;
+    left: 30%;
+    bottom: 60px;
+    width: 550px;
     height: auto;
+}
+.header .titlea{
+    letter-spacing: 4px;
+    color: #FFFFFF;
+    font-size: 55px;
+    bottom: 1px;
+    left: 27%;
+    position: absolute;
 }
 .title{
     position: relative;
-
-    height: 300px;
+    height: 250px;
     width: auto;
 }
 .title p{
     position: absolute;
     bottom: 50px;
-    left: 25%;
+    left: 27%;
     letter-spacing: 1px;
     line-height: 50px;
     text-align: center;
-    font-size: 35px;
+    font-size: 30px;
     color: #FFFFFF;
 }
 .event1{
-    padding-top: 130px;
-
+    padding: 20px;
     width: 100%;
-    height: 730px;
-}
-.event1 .even1-1 {
+    height: 750px;
 
-    width: 44%;
+}
+.event1 .e1-1{
+    width: 47%;
     height: auto;
     float: left;
+}
+.e1-1 p{
+    padding-top: 30px;
+    line-height: 20px;
     color: #FFFFFF;
+    letter-spacing: 2px;
 }
-.even1-1 h2{
-    padding-bottom: 30px;
-}
-.even1-1 p{
-    font-size: 20px;
-    line-height: 28px;
-    letter-spacing: 1px;
-    margin-right: 10px;
-}
-.event1 .even1-2{
-
-    width: 54%;
+.event1 .e1-2{
+    margin-left: 10px;
+    width: 51%;
     height: auto;
     float: left;
-    padding-left: 10px;
 }
-.even1-2 img{
+.e1-2 img{
+    width: 679px ;
+    height: 459px;
     box-shadow: 0px 0px 5px #f3f3f3;
 }
+
 .event2{
-
+    padding: 20px;
     width: 100%;
-    height: 700px;
-}
-.event2 .event2-1 {
+    height: 750px;
 
-    width: 54%;
+}
+.event2 .e2-1{
+    width: 47%;
     height: auto;
     float: left;
-    color: #FFFFFF;
 }
-.event2-1 img{
+.e2-2 p{
+    padding-top: 30px;
+    line-height: 20px;
+    color: #FFFFFF;
+    letter-spacing: 2px;
+}
+.event2 .e2-2{
+    margin-left: 10px;
+    width: 51%;
+    height: auto;
+    float: left;
+}
+.e2-1 img{
+    width: 679px ;
+    height: 459px;
     box-shadow: 0px 0px 5px #f3f3f3;
-}
-.event2 .event2-2 {
-
-    width: 44%;
-    height: auto;
-    float: left;
-    color: #FFFFFF;
 }
 .event3{
-
     width: 100%;
     height: 900px;
 }
@@ -108,6 +116,7 @@
     letter-spacing: 1px;
 }
 .event3 .p1{
+    margin-right: 20px;
     height: auto;
     width: 49%;
     float: left;
