--- a/css/cssLayout.css
+++ b/css/cssLayout.css
@@ -7,7 +7,7 @@ body {
     margin: 0 auto;
     width: 100%;
     height: 100%;
-    font-family: Helvetica, Arial, Tahoma, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 16px;
     min-width: 1280px;
 }
