--- a/css/event2014.css
+++ b/css/event2014.css
@@ -29,9 +29,10 @@
 .header .titlea{
     letter-spacing: 4px;
     color: #FFFFFF;
-    font-size: 55px;
+    font-size: 75px;
     bottom: 1px;
-    left: 27%;
+    font-weight: 200;
+    left: 20%;
     position: absolute;
 }
 .title{
