--- a/css/DoiTac.css
+++ b/css/DoiTac.css
@@ -38,6 +38,12 @@
     float: left;
     background: white;
     margin-left: 3%;
+
+    position: relative;
+    border: 1px solid #333;
+
+    overflow: hidden;
+
 }
 
 /*.info button {*/
@@ -100,6 +106,8 @@
     -webkit-transition: all 1s ease;
     -moz-transition: all 1s ease;
     -o-transition: all 1s ease;
+    max-width: 100%;
+
 }
 
 .info img:hover {
