--- a/css/cssLayout.css
+++ b/css/cssLayout.css
@@ -29,8 +29,8 @@ nav {
 article {
     min-height: 400px;
     width: 80%;
-    margin-left: 20%;
-    /*background-color: red;*/
+    margin-left: 20%; /*background-color: red;*/
+
     height: 100%;
 
 }
