--- a/css/ChiTietNgheSy.css
+++ b/css/ChiTietNgheSy.css
@@ -1,48 +1,44 @@
-.container{
+.container {
     background-image: url("../images/bg.jpg");
     display: block;
     height: 936.4px;
     padding-top: 120px;
     padding-left: 55px;
 }
-.container1{
-    width:856.4px;
-    height: 858.25px;
-    /*background: white;*/
+
+.container1 {
     padding-top: 20px;
     padding-left: 15px;
 }
-.details1{
-    /*background: #1ccacd;*/
+
+.details1 {
     height: 808.25px;
     width: 398.2px;
     float: left;
 
 }
-.details2{
+
+.details2 {
     float: left;
-    /*background: #74bfdd;*/
     height: 808.25px;
     width: 398.2px;
     margin-left: 20px;
 }
-body{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 15px; /*  base font size  15px= 1em*/
-    margin: 0;
-}
+
 .details1 h4 {
     font-size: 35px;
     color: orange;
 }
+
 .details1 p {
     color: white;
     text-align: justify;
-    font-size:12px;
+    font-size: 12px;
     line-height: 28px;
     letter-spacing: 1px;
     font-weight: normal;
 }
+
 .details2 img {
     margin-top: 10px;
     border: 3px solid white;
@@ -51,12 +47,7 @@ body{
     border-radius: 2%;
 }
 
-
-*{
-    padding: 0px;
-    margin: 0px;
-}
-#lo1{
+#lo1 {
     position: relative;
     width: 40px;
     height: 40px;
@@ -64,11 +55,13 @@ body{
     border-radius: 50%;
     margin-top: 15px;
 }
-#lo1:hover{
+
+#lo1:hover {
     background: orange;
     opacity: 1;
 }
-#lo1 a{
+
+#lo1 a {
     position: absolute;
     top: 22%;
     left: 40%;
@@ -76,8 +69,7 @@ body{
     text-decoration: none;
 }
 
-
-#lo2{
+#lo2 {
     position: relative;
     width: 40px;
     height: 40px;
@@ -86,26 +78,30 @@ body{
     margin-top: 15px;
 
 }
-#lo2:hover{
+
+#lo2:hover {
     background: orange;
     opacity: 1;
 }
-#lo2 a{
+
+#lo2 a {
     position: absolute;
     top: 18%;
     left: 18%;
     color: white;
     text-decoration: none;
 }
-#lo2 img{
+
+#lo2 img {
     width: 25px;
     height: 25px;
 }
-.lo1{
+
+.lo1 {
     display: inline-block;
 }
 
-#lo3{
+#lo3 {
     position: relative;
     width: 40px;
     height: 40px;
@@ -114,18 +110,118 @@ body{
     margin-top: 15px;
 
 }
-#lo3:hover{
+
+#lo3:hover {
     background: orange;
     opacity: 1;
 }
-#lo3 a{
+
+#lo3 a {
     position: absolute;
     top: 10%;
     left: 18%;
     color: white;
     text-decoration: none;
 }
-#lo3 img{
+
+#lo3 img {
     width: 25px;
     height: 13px;
+}
+
+span {
+    color: white;
+    font-size: 14px;
+}
+
+@media all and (max-width: 414px) {
+    body {
+        background-attachment: scroll;
+        text-align: justify;
+    }
+
+    .relative {
+        display: none;
+    }
+
+    .header h1 {
+        font-size: 70px;
+        position: absolute;
+        top: 300px;
+        left: 20%;
+    }
+
+    .header img {
+        width: 700px;
+    }
+
+    .title p {
+        font-size: 40px;
+        line-height: 70px;
+        position: absolute;
+        top: 0px;
+    }
+
+    article {
+        width: 100%;
+        margin-left: 0%;
+    }
+
+    .details1 {
+        width: 95%;
+        height: 100%;
+    }
+
+    .details1 p {
+        font-size: 40px;
+        line-height: 80px;
+    }
+
+    .details1 h4 {
+        font-size: 100px;
+    }
+
+    .details1 span {
+        font-size: 70px;
+    }
+
+    .details2 {
+        clear: both;
+        width: 95%;
+        height: 100%;
+    }
+
+    .details2 img {
+        width: 95%;
+        height: 100%;
+    }
+
+    #lo1 {
+        width: 100px;
+        height: 100px;
+    }
+
+    #lo1 a {
+        font-size: 50px;
+    }
+
+    #lo2 {
+        width: 100px;
+        height: 100px;
+    }
+
+    #lo2 img {
+        width: 60px;
+        height: 60px;
+    }
+
+    #lo3 {
+        width: 100px;
+        height: 100px;
+    }
+
+    #lo3 img {
+        width: 60px;
+        height: 60px;
+    }
 }
