--- a/css/LienHe.css
+++ b/css/LienHe.css
@@ -76,7 +76,64 @@
     width: 90%;
     height: 90px;
 }
-.contentz hr{
+.contentz hr {
     opacity: 0.3;
     margin-bottom: 10px;
+}
+.row1{
+    height: 23%;
+    width: 99%;
+    /*border: #FF8000 solid 1px;*/
+}
+.row4{
+    height: 23%;
+    width: 99%;
+    /*border: #FF8000 solid 1px;*/
+}
+.row2{
+    height: 44%;
+    width: 99%;
+    /*border: #FF8000 solid 1px;*/
+}
+.row3{
+    position: absolute;
+    height: 10%;
+    width: 99%;
+}
+.info1 button {
+    margin-top: 30%;
+    position: absolute;
+    bottom: 10%;
+    left: 2%;
+    font-size: 16px;
+    text-align: center;
+    display: inline-block;
+    padding: 12px 15px;
+    color: white;
+    background-color: forestgreen;
+    border-radius: 5%;
+}
+
+.info1 button:hover {
+    background-color: coral;
+    color: white;
+}
+.row2 textarea {
+    margin-left: 10px;
+    width: 90%;
+    height: 90%;
+}
+.row1 input{
+    width: 43.4%;
+    height: 40%;
+    margin-left: 10px;
+}
+.row4 input{
+    width: 90%;
+    height: 40%;
+    margin-left: 10px;
+}
+.contentz a{
+    text-decoration: none;
+    color: black;
 }
