--- a/css/shop.css
+++ b/css/shop.css
@@ -123,6 +123,7 @@
 
 }
 .content .c1{
+    text-align: center;
     margin-right: 30px;
     height: 430px;
     width: 340px;
@@ -130,6 +131,7 @@
     float: left;
 }
 .content .c2{
+    text-align: center;
     height: 430px;
     width: 340px;
     background-color: #B404AE;
@@ -138,7 +140,34 @@
 }
 .content .c3{
     height: 430px;
+    text-align: center;
     width: 340px;
     background-color: #FF8000;
     float: left;
+}
+.content .name_event{
+    padding-top: 20px;
+    font-size: 35px;
+    font-weight: bold;
+    color: #FFFFFF;
+}
+.content .money{
+    font-size: 25px;
+    font-weight: bold;
+    color: #FFFFFF;
+}
+.content .thongtin{
+    font-size: 15px;
+    margin-top: 30px;
+    letter-spacing: 1.5px;
+    line-height: 40px;
+    margin-left: 20px;
+    background-color: #FFFFFF;
+    width: 300px;
+    height: 250px;
+}
+.content .submit_buy{
+    color: #FFFFFF;
+    font-size: 28px;
+    font-weight: bold;
 }
