Hieu Pikas commit 11/04/2018

--- a/css/cssLayout.css
+++ b/css/cssLayout.css
@@ -148,3 +148,15 @@ footer {
     color: white;
     font-size: 18px;
 }
+
+.landautien {
+    font-size: 80px;
+    color: #FFFFFF;
+    font-weight: 200;
+}
+
+.lanthu2 {
+    font-size: 40px;
+    color: #FFFFFF;
+    font-weight: 200;
+}
