--- a/css/cssLayout.css
+++ b/css/cssLayout.css
@@ -160,3 +160,12 @@ footer {
     color: #FFFFFF;
     font-weight: 200;
 }
+
+.even1-1 .up-top {
+    font-size: 85px;
+    font-weight: 200;
+}
+.event2-2 .up-top1 {
+    font-size: 85px;
+    font-weight: 200;
+}
